Fix/trouver du soutien fixes (#20)
* fix(trouver-du-soutien): Selectionnez -> Selectionner

* fix(trouver-du-soutien): no format = FORMAL_ALL

* fix(trouver-du-soutien): remove more filters button

* fix(trouver-du-soutien): better looking SPE card button when addressLabel too long on mobile

--- a/components/common/CustomCard.module.scss
+++ b/components/common/CustomCard.module.scss
@@ -49,6 +49,7 @@
 
 .button {
   margin-left: auto;
+  flex-shrink: 0;
 }
 
 /* --- desktop --- */
